hours-and-location.css
@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Jost:wght@700&display=swap');
body{
    margin: 0;
    font-family: 'PT Sans Narrow', sans-serif;
    color: white;
    background-color: black;
}
.hours-and-location-container{
    display: flex;
    margin-top: 50px;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
}
.hours-and-location-item{
    width: 35.5vw;
    height: 48vh;
    text-align: center;
    background-color: black;
    justify-content: center;

}
.hours-and-location-item > ul{
    list-style-type: none;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
}
.hours-and-location-item > h1{
    text-decoration: underline;
}
#hours-and-location-border{
    border: 3px double white;
    margin-left:8vw;
    margin-right:8vw;
}
iframe.gmaps{
    width: 99.9%; 
    height: 40vh;
    border:0;
}

